Eliminacion de archivo seed incorrecto y modificaciones para incorporacion de filtrado correcto
