# src/services/responseService.ts
@@ -1,4 +1,4 @@
-import { List, ApplicationResponse, PaginationParams } from '../types/types';
+import { List, ApplicationResponse, PaginationParams, FilterParams } from '../types/types';
 
 /**
  * Calculate pagination parameters from page and limit values
@@ -7,9 +7,24 @@ export const calculatePagination = (
     page: number = 1,
     limit: number = 10
 ): PaginationParams => ({
-    page: Math.max(1, page),
-    limit: Math.max(1, Math.min(limit, 50)), // Limit maximum items per page to 50
-    skip: (Math.max(1, page) - 1) * Math.max(1, Math.min(limit, 50))
+    page: Math.max(1, page || 1),
+    limit: Math.max(1, Math.min(limit || 10, 50)), // Limit maximum items per page to 50
+    skip: (Math.max(1, page || 1) - 1) * Math.max(1, Math.min(limit || 10, 50))
+});
+
+/**
+ * Extrac filter parameters
+ */
+export const formatterFilters = (
+    searchCharacters: string = '',
+    game: string = 'all',
+    levelRankMin: number = 1,
+    levelRankMax: number = 100
+): FilterParams => ({
+    searchCharacters: searchCharacters != 'undefined' ? searchCharacters : '',
+    game: game != 'undefined' ? game : 'all',
+    levelRankMin: Math.max(1, levelRankMin || 1),
+    levelRankMax: Math.max(1, Math.min(levelRankMax || 100, 100))
 });
 
 /**
